# gemstore

./: .gitignore  CMakeLists.txt  README.md
docs/: data_store.md  design.md  internal_api_documentation.md
docs/example_configs/: test1.json  test2.json  test3.json  test_broadcast1.json  test_broadcast2.json  test_broadcast3.json
docs/perf/: a.json  loadgen.py
frontend_src/gemstore-client/: README.md  index.html  package-lock.json  package.json
frontend_src/gemstore-client/src/: App.svelte  app.css
frontend_src/gemstore-client/src/lib/: Chat.svelte  Dumper.svelte  GetValue.svelte  SetValue.svelte
kvstore/: CMakeLists.txt  extendibleHashTable.cc
kvstore/buffer/: bufferPool.cc
kvstore/disk/: diskManager.cc
kvstore/include/: common.h  extendibleHashTable.h
kvstore/include/buffer/: bufferPool.h
kvstore/include/disk/: README.md  diskManager.h
kvstore/include/page/: extendibleHashTableBucketPage.h  extendibleHashTableDirectoryPage.h  extendibleHashTableHeaderPage.h
remote_deps/: README.md
remote_deps/include/: httplib.h
src/: client.cpp  common.cpp  extendibleHashTable.cpp  networking.cpp  server.cpp  store.cpp
src/include/: common.hpp  extendibleHashTable.hpp  networking.hpp  store.hpp
